--- a/sheep/templates/sheep/sheep_list.html
+++ b/sheep/templates/sheep/sheep_list.html
@@ -1,4 +1,4 @@
-{% extends 'sheep/base.html' %}
+{% extends 'base.html' %}
 
 {% block title %}Sheep | Sheep Manager{% endblock %}
 
@@ -70,9 +70,11 @@
                                         <a href="{% url 'sheep-detail' sheep.id %}" class="btn btn-sm btn-info">
                                             <i class="fas fa-eye"></i>
                                         </a>
+                                        &nbsp;&nbsp;&nbsp;
                                         <a href="{% url 'sheep-update' sheep.id %}" class="btn btn-sm btn-warning">
                                             <i class="fas fa-edit"></i>
                                         </a>
+                                        &nbsp;&nbsp;&nbsp;
                                         <a href="{% url 'sheep-delete' sheep.id %}" class="btn btn-sm btn-danger">
                                             <i class="fas fa-trash"></i>
                                         </a>
