--- a/sheep/templates/sheep/breed_form.html
+++ b/sheep/templates/sheep/breed_form.html
@@ -1,4 +1,4 @@
-{% extends 'sheep/base.html' %}
+{% extends 'base.html' %}
 
 {% block title %}
     {% if form.instance.id %}Edit {{ form.instance.name }}{% else %}Add New Breed{% endif %} | Sheep Manager
