--- a/sheep/templates/sheep/sheep_confirm_delete.html
+++ b/sheep/templates/sheep/sheep_confirm_delete.html
@@ -1,4 +1,4 @@
-{% extends 'sheep/base.html' %}
+{% extends 'base.html' %}
 
 {% block title %}Delete Sheep {{ sheep.tag_number }} | Sheep Manager{% endblock %}
 
