--- a/sheepflock/templates/base.html
+++ b/sheepflock/templates/base.html
@@ -29,7 +29,7 @@
     <header>
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <div class="container">
-                <a class="navbar-brand" href="{% url 'breed-list' %}">
+                <a class="navbar-brand" href="{% url 'home' %}">
                     <i class="fas fa-sheep me-2"></i>Sheep Manager
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -42,6 +42,12 @@
                         </li>
                         <li class="nav-item">
                             <a class="nav-link {% if 'sheep/' in request.path %}active{% endif %}" href="{% url 'sheep-list' %}">Sheep</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link {% if 'breeding/' in request.path %}active{% endif %}" href="{% url 'breeding-record-list' %}">Breeding Records</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link {% if 'lambing/' in request.path %}active{% endif %}" href="{% url 'lambing-record-list' %}">Lambing Records</a>
                         </li>
                         <!-- Add more navigation links here as needed -->
                     </ul>
