--- a/sheepflock/templates/home.html
+++ b/sheepflock/templates/home.html
@@ -31,6 +31,18 @@
             </div>
         </div>
     </div>
+</div>
+
+<div class="row mt-4">
+    <div class="col-md-6">
+        <div class="card h-100">
+            <div class="card-body">
+                <h5 class="card-title">Breeding Records</h5>
+                <p class="card-text">View and Enter Notes into the Breeding Records Log</p>
+                <a href="{% url 'breeding-record-list' %}" class="btn btn-success">View Breeding Records</a>
+            </div>
+        </div>
+    </div>
 
 </div>
 {% endblock %}
