--- a/sheepflock/templates/home.html
+++ b/sheepflock/templates/home.html
@@ -44,5 +44,14 @@
         </div>
     </div>
 
+    <div class="col-md-6">
+        <div class="card h-100">
+            <div class="card-body">
+                <h5 class="card-title">Lambing Records</h5>
+                <p class="card-text">View and Enter Notes into the Lambing Records Log</p>
+                <a href="{% url 'lambing-record-list' %}" class="btn btn-success">View Lambing Records</a>
+            </div>
+        </div>
+    </div>
 </div>
 {% endblock %}
