--- a/sheep/templates/sheep/sheep_form.html
+++ b/sheep/templates/sheep/sheep_form.html
@@ -97,7 +97,7 @@
                     </div>
                     
                     <div class="mb-3">
-                        <label for="{{ form.weight_current.id_for_label }}" class="form-label">Weight (kg)</label>
+                        <label for="{{ form.weight_current.id_for_label }}" class="form-label">Weight (lb)</label>
                         {{ form.weight_current }}
                         {% if form.weight_current.errors %}
                             <div class="invalid-feedback d-block">{{ form.weight_current.errors }}</div>
