--- a/sheep/templates/sheep/lambing_record_detail.html
+++ b/sheep/templates/sheep/lambing_record_detail.html
@@ -15,9 +15,11 @@
             <a href="{% url 'lambing-record-update' lambing_record.id %}" class="btn btn-warning">
                 <i class="fas fa-edit me-2"></i>Edit
             </a>
+            &nbsp;&nbsp;&nbsp;
             <a href="{% url 'lambing-record-delete' lambing_record.id %}" class="btn btn-danger">
                 <i class="fas fa-trash me-2"></i>Delete
             </a>
+            &nbsp;&nbsp;&nbsp;
             <a href="{% url 'lambing-record-list' %}" class="btn btn-secondary">
                 <i class="fas fa-arrow-left me-2"></i>Back
             </a>
