--- a/sheepflock/templates/base.html
+++ b/sheepflock/templates/base.html
@@ -49,6 +49,9 @@
                         <li class="nav-item">
                             <a class="nav-link {% if 'lambing/' in request.path %}active{% endif %}" href="{% url 'lambing-record-list' %}">Lambing Records</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link {% if 'health/' in request.path %}active{% endif %}" href="{% url 'health-record-list' %}">Health Records</a>
+                        </li>
                         <!-- Add more navigation links here as needed -->
                     </ul>
                 </div>
