--- a/sheep/templates/sheep/lambing_record_detail.html
+++ b/sheep/templates/sheep/lambing_record_detail.html
@@ -135,24 +135,24 @@
         <div class="card mb-4">
             <div class="card-header d-flex justify-content-between align-items-center">
                 <h5 class="card-title mb-0">Additional Images</h5>
+                <a href="{% url 'lambing-add-image' lambing_record.id %}" class="btn btn-sm btn-primary">
+                    <i class="fas fa-plus me-1"></i>Add Image
+                </a>
             </div>
             <div class="card-body">
                 <div class="row">
                     {% for image in lambing_record.additional_images.all %}
-                    <div class="col-6 mb-3">
-                        <div class="card">
-                            <img src="{{ image.image.url }}" alt="{{ image.caption }}" class="card-img-top">
-                            {% if image.caption %}
-                            <div class="card-body p-2">
-                                <small>{{ image.caption }}</small>
-                            </div>
-                            {% endif %}
-                            <div class="card-footer p-2 text-center">
-                                <a href="{% url 'lambing-delete-image' image.id %}" class="btn btn-sm btn-danger">
-                                    <i class="fas fa-trash"></i> Delete
-                                </a>
-                            </div>
+
+                    <div class="col-6">
+                        <div class="position-relative">
+                            <img src="{{ image.image.url }}" alt="{{ image.caption }}" class="img-fluid rounded">
+                            <a href="{% url 'lambing-delete-image' image.id %}" class="btn btn-sm btn-danger position-absolute top-0 end-0 m-1" title="Delete image">
+                                <i class="fas fa-trash"></i>
+                            </a>
                         </div>
+                        {% if img.caption %}
+                        <small class="d-block text-muted">{{ img.caption }}</small>
+                        {% endif %}
                     </div>
                     {% endfor %}
                 </div>
@@ -160,12 +160,6 @@
         </div>
         {% endif %}
         
-        <!-- Add Image Button -->
-        <div class="text-center mb-4">
-            <a href="{% url 'lambing-add-image' lambing_record.id %}" class="btn btn-primary">
-                <i class="fas fa-camera me-2"></i>Add Image
-            </a>
-        </div>
     </div>
 </div>
 {% endblock %}
