--- a/sheep/templates/sheep/health_record_form.html
+++ b/sheep/templates/sheep/health_record_form.html
@@ -34,11 +34,15 @@
                 <div class="col-md-6">
                     <div class="form-group mb-3">
                         <label for="{{ form.sheep.id_for_label }}" class="form-label">Sheep <span class="text-danger">*</span></label>
-                        {{ form.sheep }}
+                        {% if form.initial.sheep %}
+                            <input type="text" class="form-control" value="{{ form.initial.sheep }}" readonly>
+                            <input type="hidden" name="sheep" value="{{ form.initial.sheep.pk }}">
+                        {% else %}
+                            {{ form.sheep }}
+                        {% endif %}
                         {% if form.sheep.errors %}
                             <div class="text-danger">{{ form.sheep.errors }}</div>
                         {% endif %}
-                        <div class="form-text">Select the sheep this health record is for</div>
                     </div>
                 </div>
                 <div class="col-md-6">
@@ -61,7 +65,6 @@
                         {% if form.record_type.errors %}
                             <div class="text-danger">{{ form.record_type.errors }}</div>
                         {% endif %}
-                        <div class="form-text">Type of health record</div>
                     </div>
                 </div>
                 <div class="col-md-6">
@@ -112,15 +115,12 @@
                             <div class="text-danger">{{ form.requires_followup.errors }}</div>
                         {% endif %}
                     </div>
-                </div>
-                <div class="col-md-6">
                     <div class="form-group mb-3" id="followup_date_group">
                         <label for="{{ form.followup_date.id_for_label }}" class="form-label">Follow-up Date</label>
                         {{ form.followup_date }}
                         {% if form.followup_date.errors %}
                             <div class="text-danger">{{ form.followup_date.errors }}</div>
                         {% endif %}
-                        <div class="form-text">Date when follow-up is required</div>
                     </div>
                 </div>
             </div>
@@ -133,20 +133,6 @@
                         {% if form.notes.errors %}
                             <div class="text-danger">{{ form.notes.errors }}</div>
                         {% endif %}
-                        <div class="form-text">Additional details about the health event</div>
-                    </div>
-                </div>
-            </div>
-            
-            <div class="row mb-3">
-                <div class="col-md-12">
-                    <div class="form-group mb-3">
-                        <label for="{{ form.image.id_for_label }}" class="form-label">Image</label>
-                        {{ form.image }}
-                        {% if form.image.errors %}
-                            <div class="text-danger">{{ form.image.errors }}</div>
-                        {% endif %}
-                        <div class="form-text">Optional image related to the health record</div>
                     </div>
                 </div>
             </div>
