--- a/sheep/templates/sheep/lambing_record_detail.html
+++ b/sheep/templates/sheep/lambing_record_detail.html
@@ -52,7 +52,7 @@
                 <div class="row mt-3">
                     <div class="col-12">
                         <h6>Complications:</h6>
-                        <p>{{ lambing_record.complications|linebreaks }}</p>
+                        <p>{{ lambing_record.complications }}</p>
                     </div>
                 </div>
                 {% endif %}
@@ -61,102 +61,12 @@
                 <div class="row mt-3">
                     <div class="col-12">
                         <h6>Notes:</h6>
-                        <p>{{ lambing_record.notes|linebreaks }}</p>
+                        <p>{{ lambing_record.notes }}</p>
                     </div>
                 </div>
                 {% endif %}
             </div>
         </div>
-
-        <!-- Lambs Section -->
-        <div class="card mb-4">
-            <div class="card-header d-flex justify-content-between align-items-center">
-                <h5 class="card-title mb-0">Lambs Born</h5>
-                <a href="{% url 'sheep-create' %}?mother={{ lambing_record.ewe.id }}&birth_record={{ lambing_record.id }}&date_of_birth={{ lambing_record.date|date:'Y-m-d' }}" class="btn btn-sm btn-success">
-                    <i class="fas fa-plus me-1"></i>Add Lamb
-                </a>
-            </div>
-            <div class="card-body">
-                {% if lambs %}
-                <div class="table-responsive">
-                    <table class="table table-hover">
-                        <thead>
-                            <tr>
-                                <th>Tag Number</th>
-                                <th>Name</th>
-                                <th>Gender</th>
-                                <th>Status</th>
-                                <th>Actions</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            {% for lamb in lambs %}
-                                <tr>
-                                    <td>{{ lamb.tag_number }}</td>
-                                    <td>{{ lamb.name|default:"-" }}</td>
-                                    <td>{{ lamb.get_gender_display }}</td>
-                                    <td>{{ lamb.get_status_display }}</td>
-                                    <td>
-                                        <a href="{% url 'sheep-detail' lamb.id %}" class="btn btn-sm btn-info">
-                                            <i class="fas fa-eye"></i>
-                                        </a>
-                                    </td>
-                                </tr>
-                            {% endfor %}
-                        </tbody>
-                    </table>
-                </div>
-                {% else %}
-                <p class="text-muted">No lambs have been recorded for this lambing event yet.</p>
-                {% endif %}
-            </div>
-        </div>
-    </div>
-    
-    <!-- Images Section -->
-    <div class="col-md-4">
-        <!-- Primary Image -->
-        {% if lambing_record.primary_image %}
-        <div class="card mb-4">
-            <div class="card-header">
-                <h5 class="card-title mb-0">Primary Image</h5>
-            </div>
-            <div class="card-body text-center">
-                <img src="{{ lambing_record.primary_image.url }}" alt="Primary image of lambing" class="img-fluid rounded mb-3">
-            </div>
-        </div>
-        {% endif %}
-        
-        <!-- Additional Images -->
-        {% if lambing_record.additional_images.all %}
-        <div class="card mb-4">
-            <div class="card-header d-flex justify-content-between align-items-center">
-                <h5 class="card-title mb-0">Additional Images</h5>
-                <a href="{% url 'lambing-add-image' lambing_record.id %}" class="btn btn-sm btn-primary">
-                    <i class="fas fa-plus me-1"></i>Add Image
-                </a>
-            </div>
-            <div class="card-body">
-                <div class="row">
-                    {% for image in lambing_record.additional_images.all %}
-
-                    <div class="col-6">
-                        <div class="position-relative">
-                            <img src="{{ image.image.url }}" alt="{{ image.caption }}" class="img-fluid rounded">
-                            <a href="{% url 'lambing-delete-image' image.id %}" class="btn btn-sm btn-danger position-absolute top-0 end-0 m-1" title="Delete image">
-                                <i class="fas fa-trash"></i>
-                            </a>
-                        </div>
-                        {% if img.caption %}
-                        <small class="d-block text-muted">{{ img.caption }}</small>
-                        {% endif %}
-                    </div>
-                    {% endfor %}
-                </div>
-            </div>
-        </div>
-        {% endif %}
-        
     </div>
 </div>
 {% endblock %}
