--- a/sheepflock/templates/home.html
+++ b/sheepflock/templates/home.html
@@ -6,7 +6,8 @@
 <div class="row">
     <div class="col-md-12 text-center">
         <h1 class="display-4">Welcome to Flock Manager</h1>
-        <p class="lead">Your complete solution for planning and managing your flock</p>
+        <p class="lead">Your solution for planning and managing your sheep flock</p>
+        <p class="lead">Written by Bill Lensmire.  Free Open Source Software. Freely you received, freely give.</p>
     </div>
 </div>
 
