--- a/sheepflock/templates/home.html
+++ b/sheepflock/templates/home.html
@@ -15,23 +15,20 @@
     <div class="col-md-6">
         <div class="card h-100">
             <div class="card-body">
-                <h5 class="card-title">Breeds</h5>
-                <p class="card-text">View and Enter Notes into the Breeds Log</p>
-                <a href="{% url 'breed-list' %}" class="btn btn-success">View Breeds</a>
+                <h5 class="card-title">Sheep</h5>
+                <a href="{% url 'sheep-list' %}" class="btn btn-success">View Sheep</a>
+            </div>
+        </div>
+    </div>
+    <div class="col-md-6">
+        <div class="card h-100">
+            <div class="card-body">
+                <h5 class="card-title">Sheep By Birth Year</h5>
+                <a href="{% url 'sheep-by-birth-year' %}" class="btn btn-success">View Sheep By Birth Year</a>
             </div>
         </div>
     </div>
 
-    <div class="col-md-6">
-        <div class="card h-100">
-            <div class="card-body">
-                <h5 class="card-title">Sheep</h5>
-                <p class="card-text">View and Enter Notes into the Sheep Log</p>
-                <a href="{% url 'sheep-list' %}" class="btn btn-success">View Sheep</a>
-            </div>
-            </div>
-        </div>
-    </div>
 </div>
 
 <div class="row mt-4">
